<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboardingactivity.OnboardingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_currency_selector_text"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/default_currency_selector_spinner" />

    <Spinner
        android:id="@+id/default_currency_selector_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:entries="@array/rates"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_large"
        android:textAlignment="center"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/language_selection_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_selection_text"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/language_selection_group"
        android:layout_marginBottom="@dimen/margin_padding_size_small"/>

    <RadioGroup
        android:id="@+id/language_selection_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        android:layout_marginStart="@dimen/margin_padding_size_small"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_save_preferences"
        android:checkedButton="@id/english_language">

        <RadioButton
            android:id="@+id/english_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"
            android:drawableTop="@drawable/ic_united_states"
            android:text="@string/english_language_label" />

        <RadioButton
            android:id="@+id/russian_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_small"
            android:drawableTop="@drawable/ic_russia"
            android:text="@string/russian_language_label" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences_setup_button_text"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_small"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
